# getme

./: .gitignore  README.md
.github/workflows/: cmake.yml
Cpp/: .clang-format  CMakeLists.txt
Cpp/Examples/: CMakeLists.txt
Cpp/Examples/Common/: CMakeLists.txt
Cpp/Examples/Common/Include/Common/: reporting.h  smoothing_headers.h
Cpp/Examples/Common/Source/: reporting.cpp
Cpp/Examples/EuropeMesh/: CMakeLists.txt  main.cpp
Cpp/Examples/GearMeshes/: CMakeLists.txt  main.cpp
Cpp/Examples/PlatonicMeshes/: CMakeLists.txt  main.cpp
Cpp/Mathematics/: CMakeLists.txt
Cpp/Mathematics/Include/Mathematics/: bounding_box.h  generalized_polygon_transformation.h  polygon.h  polygon_algorithms.h  vector2d.h  vector2d_algorithms.h
Cpp/Mathematics/Source/: bounding_box.cpp  generalized_polygon_transformation.cpp  polygon.cpp  polygon_algorithms.cpp  vector2d_algorithms.cpp
Cpp/Mathematics/Test/: CMakeLists.txt  bounding_box_test.cpp  generalized_polygon_transformation_test.cpp  mathematics_test_utilities.cpp  mathematics_test_utilities.h  mathematics_test_utilities_test.cpp  polygon_algorithms_test.cpp  polygon_test.cpp  vector2d_algorithms_test.cpp  vector2d_test.cpp
Cpp/Mesh/: CMakeLists.txt
Cpp/Mesh/Include/Mesh/: mesh_quality.h  polygonal_mesh.h  polygonal_mesh_algorithms.h
Cpp/Mesh/Source/: mesh_quality.cpp  polygonal_mesh.cpp  polygonal_mesh_algorithms.cpp
Cpp/Mesh/Test/: CMakeLists.txt  mesh_quality_test.cpp  polygonal_mesh_algorithms_test.cpp  polygonal_mesh_test.cpp
Cpp/Smoothing/: CMakeLists.txt
Cpp/Smoothing/Include/Smoothing/: basic_getme_simultaneous_config.h  basic_laplace_config.h  default_configuration.h  getme_algorithms.h  getme_config.h  getme_result.h  getme_sequential_config.h  getme_simultaneous_config.h  laplace_algorithms.h  smart_laplace_config.h  smoothing_result.h  smoothing_result_base.h
Cpp/Smoothing/Source/: common_algorithms.cpp  common_algorithms.h  default_configuration.cpp  getme_algorithms.cpp  getme_sequential.cpp  getme_sequential.h  laplace_algorithms.cpp  polygon_quality_min_heap.cpp  polygon_quality_min_heap.h
Cpp/Smoothing/Test/: CMakeLists.txt  common_algorithms_test.cpp  default_configuration_test.cpp  getme_algorithms_test.cpp  laplace_algorithms_test.cpp  polygon_quality_min_heap_test.cpp
Cpp/Testdata/: CMakeLists.txt
Cpp/Testdata/Include/Testdata/: meshes.h
Cpp/Testdata/Source/: meshes.cpp
Cpp/Utility/: CMakeLists.txt
Cpp/Utility/Include/Utility/: exception_handling.h  generic_exception.h  stop_watch.h
Cpp/Utility/Source/: exception_handling.cpp  stop_watch.cpp
Cpp/Utility/Test/: CMakeLists.txt  exception_handling_test.cpp  stop_watch_test.cpp
Matlab/: loadmesh.m  showallmeshes.m  showmesh.m
Meshes/: gear_quad_initial.mesh  gear_tri_initial.mesh  platonic1_initial.mesh  platonic2_initial.mesh  platonic3_initial.mesh  simple_mixed_planar_polygonal.mesh
